# suds

./: .cruft.json  .pre-commit-config.yaml  .prospector.yml  LICENSE  README.md  meson.build  pylintrc  pyproject.toml  pytest.ini  pytype.cfg  requirements.dev.txt  tox.ini  vulture_false_positives
.github/workflows/: auto-author-assign.yml  coverage.yml  pypi.yml
suds/: __init__.py  __main__.py  board.py  cli.py  meson.build  savefile.py  strategy.py
suds/plugins/: __init__.py  meson.build
suds/plugins/strategy/: __init__.py  meson.build  number_in.py  only_in.py
suds/strategy_plugins/: __init__.py  meson.build  number_in.py  only_in.py
tests/: conftest.py  main_test.py  test_board.py  test_cli.py  test_savefile.py  test_strategy.py  testdata.py
tests/plugins/strategy/: test_number_in.py  test_only_in.py
tests/strategy_plugins/: test_number_in.py  test_only_in.py
